--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/auth": "^20.4.0",
     "@react-navigation/native": "^6.0.2",
+    "auth": "^1.1.1",
     "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -26,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.13.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
